<resources>
    <string name="app_name">LotView</string>
    <!--<string name="app_name">KeyKeeper</string>-->


    <array name="drawer_menu_titles">
        <item>Home</item><!--0-->
        <item>Key Requests</item><!--7-->
        <item>Notifications</item><!--8-->
        <!-- <item>Profile</item>-->
        <item>Setting</item>
        <item>Logout</item>
    </array>


    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer closed</string>


    <!--Bar code string-->
    <string name="title_activity_scan_qr_code">Scan</string>
    <string name="qc_code_close">Close</string>
    <string name="qr_code_select_picture">Picture</string>
    <string name="qr_code_open_flash_light">Open flash light</string>
    <string name="qr_code_close_flash_light">Close Flash Light</string>
    <string name="qr_code_auto_scan_notification">Position QR Code</string>
    <string name="qr_code_notification">Notifications</string>
    <string name="qr_code_camera_not_open">Could not open your camera</string>
    <string name="qr_code_positive_button_know">OK</string>
    <string name="qr_code_positive_button_confirm">Confirm</string>
    <string name="qr_code_could_not_read_qr_code_from_picture">Could not read your image.Try another image</string>
    <string name="qr_code_could_not_read_qr_code_from_scanner">Sorry, could not open scan content</string>
    <string name="qr_code_camera_not_found">Could not detect camera</string>


    <string name="remember_me">Remember Me</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="enter_employeeid">Please enter employee id</string>
    <string name="enter_password">Please enter password</string>
    <string name="enter_valid_employeeid">Please enter valid employee id</string>
    <string name="error">Error</string>
    <string name="server_error">Server Error</string>
    <string name="submit">Submit</string>
    <string name="old_password">Old Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="enter_confirm_password">Enter confirm password</string>
    <string name="confirm_password_match">Confirm password must match password</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="ok">ok</string>
    <string name="unable_to_scan_qr">Unable to scan Qr code please try again</string>
    <!--<string name="internet_connection">Please check internet connection</string>-->
    <string name="internet_connection">Please check internet connection</string>
    <string name="allow_camera_permission">Please allow Camera permission to scan qr code</string>
    <string name="allow_location_permission">Please allow location permission</string>
    <string name="allow_storage_permission">Please allow Storage permission</string>
    <string name="color">Color</string>
    <string name="model_no">Model</string>
    <string name="vin_no">VIN Number</string>
    <string name="version_no"> Year</string>
    <string name="asset_type">Key Type</string>
    <string name="availability">Availability</string>
    <string name="make">Make</string>
    <string name="customer_detail">Customer Detail</string>
    <string name="customer_address">Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="employee_detail">Employee Detail</string>
    <string name="request_detail">Request Detail</string>


    <!--Asset Screen String -->
    <string name="txt_status_available">Available</string>
    <string name="txt_status_unavailable">Assigned</string>
    <string name="scan">Scan</string>
    <string name="loading">Loading...</string>
    <string name="fetching_location">Fetching location...</string>
    <string name="txt_status_type_send">send</string>
    <string name="txt_status_type_recieve">receive</string>
    <string name="txt_tab_title_pending_send_request">Sent</string>
    <string name="txt_tab_title_pending_recieve_request">Received</string>
    <string name="txt_no_data_available">No request available for now</string>
    <string name="txt_title_screen_asset_request">Key Requests</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel Request</string>
    <string name="_cancel">Cancel</string>
    <string name="scan_asset">Scan Key</string>
    <string name="keys">Keys</string>
    <string name="actionbar_keys">Keys</string>
    <string name="request_key">Request Key</string>
    <string name="confirm_request">Confirm Request</string>
    <string name="asset_detail">Key Detail</string>
    <string name="asset_map">Key Map</string>
    <string name="history">History</string>
    <string name="heading_test_drive">Test Drive</string>
    <string name="txt_no_records_avialable">No records available</string>
    <string name="txt_qr_code_screen_title">Scan</string>
    <string name="txt_qr_code_screen_title_from_home">Scan QR Code</string>
    <string name="txt_qr_code_screen_title_from_keydetail">Key Scanner</string>
    <string name="txt_qr_code_screen_title_from_transfer_ownership">Key Box Scanner</string>
    <string name="txt_my_profile">Profile</string>
    <string name="txt_home">Home</string>
    <string name="txt_all_asset">All Keys</string>
    <string name="txt_my_asset">My Keys</string>
    <string name="transfer_asset">Return Key</string>
    <string name="transfer_ownership">Transfer Ownership</string>
    <string name="confirm_transfer">Return Key</string>
    <string name="sorry_qr_code_does_not_match">Sorry this qr code does not match this asset</string>

    <string name="turn_of_mock_location_dialog_text">To use Keykeeper, you must TURN OFF GPS mock location in your
        smartphone settings.</string>
    <string name="quit_app_msg">Are you sure, want to close LotView !</string>
    <string name="logout_message">Are you sure want to logout?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_ok">OK</string>
    <string name="welcome_to_link">LotView</string>
    <string name="tittle_notifications">Notifications</string>
    <string name="tag_number">Tag Number</string>
    <string name="owner_you">Key Owner: You</string>
    <string name="owner">Key Owner:</string>
    <string name="invalid_qr_code">Invalid qr code</string>
    <string name="employee_id">Employee Id</string>
    <string name="employee_email_id">Email/Employee ID</string>
    <string name="notification_alert">Do you want to clear all notification</string>
    <string name="setting">Setting</string>

    <string name="chat_header">Chat</string>
    <string name="chat_no_internet">It seems you are not connected to Internet, Please check you connections and try again.</string>
    <string name="drive_started">Stop Drive</string>
    <string name="test_drive">Test Drive</string>
    <string name="start_drive">Start Drive</string>
    <string name="no_more_data">No More Data Found</string>

    <string name="google_maps_key">AIzaSyDUzFLr_RoI5PItlCd12Tn-8YEqO210B94</string>
    <string name="firebase_key">0b2a50fa30c096f0b61aae2622ab361081013c2f</string>
    <string name="stock_number">Stock Number: </string>
    <string name="start_date">Start Date: </string>
    <string name="place_a_qr_code_or_bar_inside_the_rectangle_box_to_scan_it">Place a Qr code/Bar code inside the viewfinder rectangle box to scan it</string>
    <string name="_forgot_password">Forgot password</string>
    <string name="back_to_login">Back to login</string>
    <string name="gps_enable_test_drive">Unable to fetch your location, It seems your Smartphone Location/Gps is turned OFF, Please turn it ON. You can continue it anyway.</string>
    <string name="start_at">Start At</string>
    <string name="satellite">Satellite</string>
    <string name="standard">Standard</string>
    <string name="location_services_disabled_tap_here_to_enable_location_services">Location Services disabled, Tap here to enable Location Services.</string>
    <string name="start_test_drive">Start Test Drive</string>
    <string name="enable_high_accuract">It seems your Location Mode is not accurate, please check \"High Accuracy\" under Mode for better results.</string>
    <string name="please_check_one_item">Please check at least one item</string>
    <string name="return_key_s">Return key(s)</string>


</resources>
