<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.keykeeper.app.views.activity.forgot_password.ForgotViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_login_back"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/_90sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:elevation="@dimen/_15sdp"
            android:shadowColor="@color/green_light"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_15sdp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <com.keykeeper.app.views.custom_view.StyledTextViewRegular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:drawableLeft="@drawable/login_profile"
                    android:drawablePadding="@dimen/_10sdp"
                    android:gravity="center_vertical"
                    android:text="@string/_forgot_password"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_17sdp" />


                <com.keykeeper.app.views.custom_view.CustomTextInputLayout
                    style="@style/TextAppearence.App.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:hint="@string/employee_id"
                    android:text="@string/employee_id"
                    android:textColorHint="@color/colorAccent"
                    android:textSize="@dimen/_13sdp">

                    <com.keykeeper.app.views.custom_view.StyledEditTextViewMedium
                        android:id="@+id/et_mail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="40"
                        android:singleLine="true"
                        android:textColor="@color/text_gray"
                        android:textSize="@dimen/_14sdp" />

                </com.keykeeper.app.views.custom_view.CustomTextInputLayout>


                <com.keykeeper.app.views.custom_view.StyledTextViewSemiBold
                    android:id="@+id/tv_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/rect_crop_green_bg"
                    android:paddingBottom="@dimen/_4sdp"
                    android:paddingLeft="@dimen/_30sdp"
                    android:paddingRight="@dimen/_30sdp"
                    android:paddingTop="@dimen/_4sdp"
                    android:text="@string/submit"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp" />



                <com.keykeeper.app.views.custom_view.StyledTextViewRegular
                    android:id="@+id/back_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back_to_login"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textColor="@color/dark_gray"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:textSize="@dimen/_12sdp"
                    android:paddingRight="@dimen/_6sdp"
                    android:drawableStart="@drawable/ic_back_gray"
                    android:layout_gravity="center_horizontal"
                    />


            </LinearLayout>
        </android.support.v7.widget.CardView>

    </RelativeLayout>
</layout>